fix: fix trending section size
Not only was it causing a horizontal scrollbar on small screens, it
looked a bit funky on large screens.

--- a/css/style.css
+++ b/css/style.css
@@ -185,18 +185,17 @@ body {
 
 .trending {
   margin: 1.25rem;
-  box-shadow: 6px 10px 5px 0px rgba(0, 0, 0, 0.05);
 }
 
 .trending__card {
+  box-shadow: 6px 10px 5px 0px rgba(0, 0, 0, 0.05);
   background-color: var(--bg-primary);
   border-radius: 10px;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: 1fr 1fr;
-  padding: 1.875rem 0.625rem;
-  gap: 2.5rem;
-  justify-items: center;
+  padding: 15px;
+  gap: 30px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .trending__topic {
